# hpc-ai-optimization-lab

./: .clang-format  .clang-tidy  .editorconfig  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml
.kiro/specs/hpc-ai-optimization-lab/: design.md  requirements.md  tasks.md
.kiro/specs/project-quality-improvement/: design.md  requirements.md  tasks.md
changelog/: 2026-02-13_kernel-optimizations.md
docker/: Dockerfile  docker-compose.yml
docs/: 01_gemm_optimization.md  02_memory_optimization.md  03_reduction_optimization.md  04_flash_attention.md  05_cuda13_features.md  Doxyfile  README.md
docs/python/: conf.py  index.rst
examples/: CMakeLists.txt  README.md
examples/01_elementwise/: relu_example.cu
examples/03_gemm/: gemm_benchmark.cu
examples/python/: basic_usage.py
python/: CMakeLists.txt
python/benchmark/: benchmark.py
python/bindings/: bindings.cpp
src/01_elementwise/: CMakeLists.txt  relu.cu  relu.cuh  sigmoid.cu  sigmoid.cuh  transpose.cu  transpose.cuh  vector_add.cu  vector_add.cuh
src/02_reduction/: CMakeLists.txt  layernorm.cu  layernorm.cuh  rmsnorm.cu  rmsnorm.cuh  softmax.cu  softmax.cuh
src/03_gemm/: CMakeLists.txt  gemm.cu  gemm.cuh
src/04_convolution/: CMakeLists.txt  conv_implicit_gemm.cu  conv_implicit_gemm.cuh  conv_winograd.cu  conv_winograd.cuh
src/05_attention/: CMakeLists.txt  flash_attention.cu  flash_attention.cuh  rope.cu  rope.cuh  topk.cu  topk.cuh
src/06_quantization/: CMakeLists.txt  dequant.cu  dequant.cuh  fp8_scaling.cu  fp8_scaling.cuh  int8_quant.cu  int8_quant.cuh
src/07_cuda13_features/: CMakeLists.txt  cluster.cu  cluster.cuh  fp8_gemm.cu  fp8_gemm.cuh  tma.cu  tma.cuh
src/common/: cuda_check.cuh  launch.cuh  reduce.cuh  tensor.cuh  timer.cuh  types.cuh
tests/: CMakeLists.txt  test_utils.hpp
tests/attention/: CMakeLists.txt  test_flash_attention.cpp  test_rope.cpp  test_topk.cpp
tests/common/: CMakeLists.txt  test_tensor.cpp  test_timer.cpp
tests/convolution/: CMakeLists.txt  test_conv.cpp
tests/cuda13/: CMakeLists.txt  test_cluster.cpp  test_fp8.cpp  test_tma.cpp
tests/elementwise/: CMakeLists.txt  test_relu.cpp  test_sigmoid.cpp  test_transpose.cpp  test_vector_add.cpp
tests/gemm/: CMakeLists.txt  test_gemm.cpp
tests/quantization/: CMakeLists.txt  test_quantize.cpp
tests/reduction/: CMakeLists.txt  test_layernorm.cpp  test_softmax.cpp
